datastreams button styling

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -231,3 +231,21 @@ body > .region,
   //background-color: lighten($brand3, 20%);
   min-height: 200px;
 }
+
+/* Admin menu. */
+html body.admin-menu {
+  margin-top: 6.4375em !important;
+
+  @include breakpoint(21.3125em 28.875em) {
+    margin-top: 4.875em !important;
+  }
+
+  @include breakpoint(28.9375em 54.75em) {
+    margin-top: 3.375em !important;
+  }
+
+  @include breakpoint(54.8125em) {
+    margin-top: 1.8125em !important;
+  }
+
+}
