--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -9,3 +9,4 @@
 @import 'navigation/block-secondary-nav';
 @import 'navigation/block-sub-nav';
 @import 'navigation/hamburger';
+@import 'navigation/block-menu__social-media';
