--- a/sass/_objects.scss
+++ b/sass/_objects.scss
@@ -1,3 +1,6 @@
+
+@import 'objects/toggle-grid-list';
+
 /* _objects file */
 // contains generic, underlying design patterns and their extensions. eg. basic styles for all sidebar blocks or list displays of content
 
