--- a/sass/ie/_ie9.scss
+++ b/sass/ie/_ie9.scss
@@ -110,6 +110,9 @@
 
 //}///-----end
 
+.cwrc.ui-layout-west, #tree.ui-layout-center.jstree.jstree-1.jstree-cwrc.ui-layout-pane.ui-layout-pane-center  {
+  -ms-overflow-style: none;
+}
 
 
 
