--- a/sass/navigation/_block-main-nav.scss
+++ b/sass/navigation/_block-main-nav.scss
@@ -11,9 +11,14 @@
   }
 }
 
+#block-menu-block-9 {
+  float: right;
+  width: 100%;
+}
 
 .menu-name-main-menu{
   // general menu styles and resets
+  /*
   float: left;
   margin-left: ms(1);
 
@@ -83,5 +88,42 @@
 
   ul.menu li.last a{
     border-right: none;
-  }
+  }*/
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
