--- a/sass/base/mixins/_grid-view.scss
+++ b/sass/base/mixins/_grid-view.scss
@@ -38,6 +38,12 @@
     right: 1em;
     bottom: 1em;
   }
+
+  .view-all-link a {
+    position: absolute;
+    left: 1em;
+    bottom: 1em;
+  }
 }
 
 //3 column grid for basic blocks
