--- a/sass/components/_blocks.scss
+++ b/sass/components/_blocks.scss
@@ -10,6 +10,7 @@
 @import 'blocks/block--homepage-slider';
 @import 'blocks/block--what-are-we';
 @import 'blocks/block--homepage-sponsors';
+@import 'blocks/block--menu-block-2';
 
 /* =============================================================================
     GENERAL BLOCK STYLES
