--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -157,9 +157,13 @@
     padding: .7em;
     border-radius: 3px;
     right: 5px;
+    max-width: 100%;
     -webkit-box-shadow: 0px 2px 2px -1px rgba(77,77,77,0.59);
     -moz-box-shadow: 0px 2px 2px -1px rgba(77,77,77,0.59);
     box-shadow: 0px 2px 2px -1px rgba(77,77,77,0.59);
+    @include breakpoint($weird-screen) {
+      max-width: 300px;
+    }
     @extend %transition;
     @include breakpoint(0 48em) {
       box-shadow: none;
@@ -180,7 +184,7 @@
       border-right: 5px solid transparent;
       border-bottom: 5px solid #fff;
       position: absolute;
-      top: -5px;
+      top: -4px;
       right: 22%;
     }
 
@@ -419,6 +423,12 @@ li.nav-user-menu {
         }
       }
       &:hover {background-color: #fff;}
+    }
+
+    li.separator {
+      line-height: 0;
+      border-top: 1px dotted #D2D1D1;
+      &:hover{background: transparent !important;}
     }
   }
 
