--- a/sass/components/_islandora.scss
+++ b/sass/components/_islandora.scss
@@ -1,1 +1,2 @@
-@import 'islandora/islandora-collection'
+@import 'islandora/islandora-collection';
+@import 'islandora/islandora-collection--icons';
