--- a/sass/components/dashboard/_dashboard__block--my-projects.scss
+++ b/sass/components/dashboard/_dashboard__block--my-projects.scss
@@ -21,29 +21,33 @@
 
   // .view-my-projects {
     li.views-row {
-      padding: 0;
       border-bottom: 1px solid $border-grey;
       list-style-image: none;
       list-style: none;
+      float: left;
+      width: 100%;
+      padding: .85em .8em;
 
        a {
-        padding: .8em 1em .8em 0em;
-        display: inline-block;
         color: $brand1;
         font-weight: $normal;
       }
 
       a.flag {
-        padding: .8em 1em .8em .7em;
+        padding: 0em 0 0em 0em;
+        height: 15px;
+        width: 20px;
+      }
+
+      > div:not(.views-field) {
+        padding-left: 1.8em;
       }
     }
 
-    li div:nth-child(2), li div.views-field-og-roles {
-      display: inline-block;
-    }
-
-    li.views-row:last-child {
+    li.views-row-last {
       border-bottom: none;
+      padding: 0;
+      div:not(.views-field) {padding-left: 0;}
     }
 
     li.views-row a[href^="/user/my-research-space"] {
@@ -56,8 +60,6 @@
         margin-right: .8em !important;
         margin-left: .2em;
       }
-
-      //color: #fff;
     }
   }
 //}
