--- a/sass/components/views/_view__block--homepage-news-and-events.scss
+++ b/sass/components/views/_view__block--homepage-news-and-events.scss
@@ -3,23 +3,20 @@
    HOMEPAGE NEWS AND EVENTS
    ========================================================================== */
 
-.block-views-news-block-1 header{
-
-}
-
 .front .section-content .region-content .block.homepage-news-event {
   position: relative;
   padding-bottom: 4.5em;
-  margin-top: 1.5em;
-  margin-bottom: 2.5em;
+  margin-top: 0em;
+  margin-bottom: 1.5em;
   float: left !important;
-  width: 32% !important;
-  margin-right: 2%;
-  @include breakpoint(0 48em) {
-    width: 100% !important;
-    margin-right: 0 !important;
-    margin-bottom: 1em;
-    margin-top: 0;
+  width: 100% !important;
+  margin-right: 0;
+  @include breakpoint(900px) {
+    width: 32% !important;
+    margin-bottom: 2.5em;
+    margin-top: 1.5em;
+    margin-right:  2% !important;
+    &:nth-child(3n+3) { margin-right: 0 !important;}
   }
 
 
@@ -45,6 +42,14 @@
     position: absolute;
     bottom: 1.5em;
     right: 1.5em;
+    left: auto;
+  }
+
+  .views-field-nothing {
+    position: absolute;
+    bottom: 1.5em;
+    right: auto;
+    left: 1.5em;
   }
 
   span.read-more-link a {
